--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
   <div class="r">ghbdtn</div>
   
+  <script src="http://jsonipgeobase.appspot.com/?callback=foobar" type="text/javascript"></script>
+
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/main.js"></script>
 </body>
