--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </script>
 </head>
 <body>
-  <div class="r">ghbdtn</div>
+  <div class="r">Привет</div>
   
-  <script src="http://jsonipgeobase.appspot.com/?callback=foobar" type="text/javascript"></script>
+  <!-- <script src="http://jsonipgeobase.appspot.com/?callback=foobar" type="text/javascript"></script> -->
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/main.js"></script>
